// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={false}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        Object {
          "backgroundColor": "#F5F5F6",
          "color": "#e0e0e0",
        },
        false,
        false,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {},
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 17,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {
            "color": "#ef5160",
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        Object {
          "borderColor": "#ef5160",
        },
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {},
        ]
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 12,
            "lineHeight": 17,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="numeric"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
            "fontWeight": "400",
            "textAlignVertical": "center",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 24,
          },
          Object {
            "color": "#9b9b9b",
          },
          Object {},
        ]
      }
    >
      Hello World
    </Text>
  </View>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={true}
    numberOfLines={5}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    autoCorrect={false}
    blurOnSubmit={true}
    editable={true}
    keyboardType="default"
    multiline={false}
    onBlur={[Function]}
    onFocus={[Function]}
    placeholderTextColor="#9b9b9b"
    style={
      Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        },
        false,
        false,
        undefined,
      ]
    }
    underlineColorAndroid="transparent"
    value="soyjavi"
  />
</View>
`;
